# zoho-iot-sdk-arduino

./: .gitignore  README.md  library.properties
examples/: ESP32_TLS.ino  ESP8266_TLS.ino  basic.ino  esp32_DHT_sensor.ino  esp32_TLS_client_ca.ino  esp32_basic.ino  esp8266_basic.ino
examples/esp32_DHT_sensor/: esp32_DHT_sensor.ino
examples/esp32_TLS/: esp32_TLS.ino
examples/esp32_TLS_client_ca/: esp32_TLS_client_ca.ino
examples/esp32_basic/: esp32_basic.ino
examples/esp32_soil_moisture_sensor/: certificate.h  esp32_soil_moisture_sensor.ino
examples/esp8266_basic/: esp8266_basic.ino
src/: zoho-iot-client.cpp  zoho-iot-client.h
test/: CMakeLists.txt  cleanbuild_coverage.sh  cleanbuild_xml.sh  rebuilt_coverage.sh  setup.sh
test/cmake/Modules/: CodeCoverage.cmake
test/mock_libs/: Arduino.h  AsyncMqttClient.cpp  AsyncMqttClient.h  PubSubClient.cpp  PubSubClient.h
test/unit_test/: Arduino_SDK_basic_test.cc
zoho-iot-sdk/: zoho-iot-client.cpp  zoho-iot-client.h
